--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <ul>
                 <div class="left-col">
                     <li>
-                        <a href="#"><img class="img-project" src="/images/project1.png" alt="Project 1"></a>
+                        <a href="#"><img class="img-project" src="2021Resume/images/project1.png" alt="Project 1"></a>
                     </li>
                     <li>
                         <a href="#"><img class="img-project" src="/images/project2.png" alt="Project 2"></a>
