--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <ul>
                     <li><a href="index.html">Work</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="/resume/cv.pdf">Resume</a></li>
+                    <li><a href="/2021Resume/resume/cv.pdf">Resume</a></li>
                 </ul>
             </nav>
         </header>
