--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
                 <ul>
                     <li><a href="#">Work</a></li>
                     <li><a href="#">About</a></li>
-                    <li><a href="/resume/cv.pdf">Resume</a></li>
+                    <li><a href="/2021Resume/resume/cv.pdf">Resume</a></li>
                 </ul>
             </nav>
         </header>
@@ -24,7 +24,7 @@
     <div class="hero">
         <div class="content-ab">
             <div class="left-col-ab">
-                <img src="/images/arifiqbal.png" alt="Arif Iqbal">
+                <img src="/2021Resume/images/arifiqbal.png" alt="Arif Iqbal">
             </div>
             <div class="right-col-ab">
                 <p class="title">
