--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
     </section>
 
-    <p class="footer">Like what you see? <a href="#">Hire Me!</a></p>
+    <p class="footer">Like what you see? <a href="https://www.linkedin.com/in/iqbaalmuhmd/">Hire Me!</a></p>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js" integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
