--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
     <div class="hero">
         <div class="content-ab">
             <div class="left-col-ab">
-                <img src="/2021Resume/images/iqbalarif.png" alt="Arif Iqbal">
+                <img src="/2021Resume/images/iqbalarif.jpg" alt="Arif Iqbal">
             </div>
             <div class="right-col-ab">
                 <p class="title">
