Update CV and porto

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <ul>
                     <li><a href="index.html">Work</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="/2021Resume/resume/cv.pdf">Resume</a></li>
+                    <li><a href="/2021Resume/resume/Resume ENG.pdf">Resume</a></li>
                 </ul>
             </nav>
         </header>
@@ -24,7 +24,7 @@
     <div class="hero">
         <div class="content">
             <p class="title">Hello, I'm Arif Iqbal</p>
-            <p>I am passionate about <span class="colored">UX Design</span></p>
+            <p>I am a <span class="colored">QA Engineer</span></p>
             <p>Currently <span class="colored">Unemployed</span></p>
             <div class="about-cta">
                 <a href="about.html" class="primary-cta">Read More</a>
@@ -37,7 +37,7 @@
             <ul>
                 <div class="left-col">
                     <li>
-                        <a href="#"><img class="img-project" src="/2021Resume/images/project1.png" alt="Project 1"></a>
+                        <a href="https://iqbalsz.github.io/Elga-project/index.html" target="_blank"><img class="img-project" src="/2021Resume/images/elgatamaLogo.png" alt="Freelance work"></a>
                     </li>
                     <li>
                         <a href="#"><img class="img-project" src="/2021Resume/images/project2.png" alt="Project 2"></a>
