--- a/about.html
+++ b/about.html
@@ -24,14 +24,16 @@
     <div class="hero">
         <div class="content-ab">
             <div class="left-col-ab">
-                <img src="/2021Resume/images/iqbalarif.jpg" style="width:350px;height:350px;" alt="Arif Iqbal">
+                <img src="/2021Resume/images/arifiqbal.JPG" style="width:350px;height:350px;" alt="Arif Iqbal">
             </div>
             <div class="right-col-ab">
                 <p class="title">
-                    Nice to meet you!
+                    I'm Iqbal, a Quality Assurance Engineer trying to find a career suitable for my set of skills.
                 </p>
                 <p class="desc">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, sequi. Doloribus quis aspernatur deserunt enim laboriosam perferendis rem voluptatum ipsum, beatae voluptatibus omnis facilis magni repellendus, possimus assumenda culpa, placeat consequatur voluptatem corrupti libero dolores hic architecto rerum? Molestiae iste in, totam mollitia veniam atque! Beatae, tempore neque quidem, error optio doloremque omnis quae ducimus in nesciunt aliquam nobis dignissimos doloribus rem sit corporis illum incidunt sequi alias harum ullam dolore quas sapiente! At dignissimos nulla minima ad animi explicabo consectetur, odit magni deleniti reiciendis illo aliquid! Harum, eos, minus dolore laborum, soluta sunt consectetur temporibus quo corrupti fugit blanditiis id nulla dignissimos nisi error minima molestiae? Ipsam maxime, quidem, sequi ad laborum exercitationem quas, accusantium iusto tempora ullam dolorem! Debitis aliquam, perspiciatis asperiores odio dolorum aperiam sint quis nesciunt id numquam fugiat at vero cum nulla laboriosam nobis recusandae nemo qui quae accusantium beatae? Similique accusamus repellendus amet numquam aspernatur! Nisi ipsam quibusdam sunt minus consequuntur fugiat, dolorem sint officiis illo! Dicta corrupti minima tenetur tempora voluptatem ratione eaque! Omnis pariatur autem tempora vel rem cum impedit et? Eius, impedit modi quod nam quo totam rem a dolore obcaecati veniam harum hic. Cupiditate illo id odio aperiam obcaecati fugit!
+                    These days my time is spent learning more about Quality Assurance, and a bit of coding. I also still trying to add more to my portofolio.
+                    <br><br>
+                    Out of the office, you'll find me jumping from one hobby to another. I love reading Manga and trying to love reading Novel. I love working out, and still trying to love Cardio as much as i love weight lifting. 
                 </p>
                 <div class="contact-me">
                     <div class="text">
@@ -39,8 +41,8 @@
                         <p class="desc">iqbalsfsz@gmail.com</p>
                     </div>
                     <ul>
-                        <li><a href="instagram.com/iqbaalmuhmd"><img src="/images/instagram.svg" alt=""></a></li>
-                        <a href="linkedin.com/iqbaalmuhmd"><img src="/images/linkedin.svg" alt=""></a>
+                        <li><a href="instagram.com/iqbaalmuhmd" target="_blank"><img src="/images/instagram.svg" alt=""></a></li>
+                        <a href="https://www.linkedin.com/in/iqbaalmuhmd/" target="_blank"><img src="/images/linkedin.svg" alt=""></a>
                     </ul>
                     
                     
