--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
             <ul>
                 <div class="left-col">
                     <li>
+                        <div class="hide" id="project1">Freelance: Elgatama</div>
                         <a href="https://iqbalsz.github.io/Elga-project/index.html" target="_blank"><img class="img-project" src="/2021Resume/images/elgatamaLogo.png" alt="Freelance work"></a>
                     </li>
                     <li>
-                        <a href="#"><img class="img-project" src="/2021Resume/images/project2.png" alt="Project 2"></a>
+                        <div class="hide">Bottom wew</div>
+                        <a href="https://github.com/iqbalsz/SanbercodeQA-Kelompok2" target="_blank"><img class="img-project" src="/2021Resume/images/SanberCode.png" alt="Project 2"></a>
                     </li>
                 </div>
                 <div class="right-col">
