--- a/about.html
+++ b/about.html
@@ -39,10 +39,12 @@
                     <div class="text">
                         <p>Reach out to me</p>
                         <p class="desc">iqbalsfsz@gmail.com</p>
+                        <!-- <a href="https://github.com/iqbalsz">Github</a>
+                        <a href="https://gitlab.com/iqbalsfsz">Gitlab</a> -->
                     </div>
                     <ul>
-                        <li><a href="instagram.com/iqbaalmuhmd" target="_blank"><img src="/images/instagram.svg" alt=""></a></li>
-                        <a href="https://www.linkedin.com/in/iqbaalmuhmd/" target="_blank"><img src="/images/linkedin.svg" alt=""></a>
+                        <!-- <li><a href="instagram.com/iqbaalmuhmd" target="_blank"><img src="/images/instagram.svg" alt=""></a></li> -->
+                        <li><a href="https://www.linkedin.com/in/iqbaalmuhmd/" target="_blank"><img src="/images/linkedin.svg" alt=""></a></li>
                     </ul>
                     
                     
