--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="right-col">
                     <li>
-                        <a href="#"><img class="img-project" src="/2021Resume/images/project3.png" alt="Project 3"></a>
+                        <a href="https://gitlab.com/iqbalsfsz/team4qa"><img class="img-project" src="/2021Resume/images/project3.png" alt="Project 3"></a>
                     </li>
                     <li>
                         <a href="#"><img class="img-project" src="/2021Resume/images/project4.png" alt="Project 4"></a>
