--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
                 <ul>
                     <li><a href="#">Work</a></li>
                     <li><a href="#">About</a></li>
-                    <li><a href="/2021Resume/resume/cv.pdf">Resume</a></li>
+                    <li><a href="/2021Resume/resume/CV M.Arif Iqbal_QA.pdf">Resume</a></li>
                 </ul>
             </nav>
         </header>
