--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <ul>
                     <li><a href="index.html">Work</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="/2021Resume/resume/Resume ENG.pdf">Resume</a></li>
+                    <li><a href="/2021Resume/resume/CV M.Arif Iqbal_QA.pdf">Resume</a></li>
                 </ul>
             </nav>
         </header>
@@ -32,7 +32,7 @@
         </div>
     </div>
 
-    <section class="featured-work">
+    <!-- <section class="featured-work">
         <div class="work-container">
             <ul>
                 <div class="left-col">
@@ -54,6 +54,52 @@
                     </li>
                 </div>
             </ul>
+        </div>
+    </section> -->
+
+    <!-- // PROJECT SECTION  -->
+
+    <section id="projects">
+        <p class="title">Recent Project</p>
+        <div class="experience-details-container">
+            <div class="details-container color-container">
+                <div class="article-container">
+                    <img src="./2021Resume/images/elgatamaLogo.png" alt="project 1" class="project-img">
+                </div>
+                <p class="experience-sub-title">Elgatama</p>
+                <div class="about-cta">
+                    <button class="project-cta" onclick="location.href='https://github.com/iqbalsz/Elga-project'"">
+                        Github
+                    </button>
+                    <button class="project-cta" onclick="location.href='https://iqbalsz.github.io/Elga-project/index.html'"">
+                        Live
+                    </button>
+                </div>
+            </div>
+            <div class="details-container color-container">
+                <div class="article-container">
+                    <img src="./2021Resume/images/SanberCode.png" alt="project 1" class="project-img">
+                </div>
+                <p class="experience-sub-title">Sanbercode Final Project</p>
+                <!-- <p class="experience-sub-info">Final Project as QA Engineer Trainee, using Cypress to Automate Testing for a dummy website</p> -->
+                <div class="about-cta">
+                    <button class="project-cta" onclick="location.href='https://github.com/iqbalsz/SanbercodeQA-Kelompok2'"">
+                        Github
+                    </button>
+                </div>
+            </div>
+            <div class="details-container color-container">
+                <div class="article-container">
+                    <img src="./2021Resume/images/project3.png" alt="project 1" class="project-img">
+                </div>
+                <p class="experience-sub-title">Coding.id Final Project</p>
+                <!-- <p class="experience-sub-info">Final Project as QA Engineer Trainee, using Katalon Studio in Automation testing for WEB, API and Mobile platform</p> -->
+                <div class="about-cta">
+                    <button class="project-cta" onclick="location.href='https://gitlab.com/iqbalsfsz/team4qa'"">
+                        Github
+                    </button>
+                </div>
+            </div>
         </div>
     </section>
 
