fixing nav link

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
             <a class="logo" href="index.html">Iqbaal<span>muhmd</span></a>
             <nav>
                 <ul>
-                    <li><a href="#">Work</a></li>
+                    <li><a href="index.html">Work</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="/2021Resume/resume/CV M.Arif Iqbal_QA.pdf">Resume</a></li>
                 </ul>
@@ -32,8 +32,7 @@
                 </p>
                 <p class="desc">
                     These days my time is spent learning more about Quality Assurance, and a bit of coding. I also still trying to add more to my portofolio.
-                    <br><br>
-                    Out of the office, you'll find me jumping from one hobby to another. I love reading Manga and trying to love reading Novel. I love working out, and still trying to love Cardio as much as i love weight lifting. 
+                    <br><br> 
                 </p>
                 <div class="contact-me">
                     <div class="text">
