--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="experience-details-container">
             <div class="details-container color-container">
                 <div class="article-container">
-                    <img src="./2021Resume/images/elgatamaLogo.png" alt="project 1" class="project-img">
+                    <img src="./images/elgatamaLogo.png" alt="project 1" class="project-img">
                 </div>
                 <p class="experience-sub-title">Elgatama</p>
                 <div class="about-cta">
@@ -78,7 +78,7 @@
             </div>
             <div class="details-container color-container">
                 <div class="article-container">
-                    <img src="./2021Resume/images/SanberCode.png" alt="project 1" class="project-img">
+                    <img src="./images/SanberCode.png" alt="project 1" class="project-img">
                 </div>
                 <p class="experience-sub-title">Sanbercode Final Project</p>
                 <!-- <p class="experience-sub-info">Final Project as QA Engineer Trainee, using Cypress to Automate Testing for a dummy website</p> -->
@@ -90,7 +90,7 @@
             </div>
             <div class="details-container color-container">
                 <div class="article-container">
-                    <img src="./2021Resume/images/project3.png" alt="project 1" class="project-img">
+                    <img src="./images/project3.png" alt="project 1" class="project-img">
                 </div>
                 <p class="experience-sub-title">Coding.id Final Project</p>
                 <!-- <p class="experience-sub-info">Final Project as QA Engineer Trainee, using Katalon Studio in Automation testing for WEB, API and Mobile platform</p> -->
