fiixing image and project gap

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
     <div class="hero">
         <div class="content-ab">
             <div class="left-col-ab">
-                <img src="/2021Resume/images/arifiqbal.JPG" style="width:350px;height:350px;" alt="Arif Iqbal">
+                <img src="./images/arifiqbal.JPG" style="width:50%;height:100%;" alt="Arif Iqbal">
             </div>
             <div class="right-col-ab">
                 <p class="title">
