Adding test case doc btn

--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
                 <div class="article-container">
                     <img src="./images/elgatamaLogo.png" alt="project 1" class="project-img">
                 </div>
-                <p class="experience-sub-title">Elgatama</p>
+                <p class="experience-sub-title">[WEB] Elgatama</p>
                 <div class="about-cta">
                     <button class="project-cta" onclick="location.href='https://github.com/iqbalsz/Elga-project'"">
                         Github
                     </button>
                     <button class="project-cta" onclick="location.href='https://iqbalsz.github.io/Elga-project/index.html'"">
-                        Live
+                        Live Demo
                     </button>
                 </div>
             </div>
@@ -80,23 +80,29 @@
                 <div class="article-container">
                     <img src="./images/SanberCode.png" alt="project 1" class="project-img">
                 </div>
-                <p class="experience-sub-title">Sanbercode Final Project</p>
+                <p class="experience-sub-title">[QA] Sanbercode Final Project</p>
                 <!-- <p class="experience-sub-info">Final Project as QA Engineer Trainee, using Cypress to Automate Testing for a dummy website</p> -->
                 <div class="about-cta">
                     <button class="project-cta" onclick="location.href='https://github.com/iqbalsz/SanbercodeQA-Kelompok2'"">
                         Github
                     </button>
+                    <button class="project-cta" onclick="location.href='https://docs.google.com/spreadsheets/d/1Zxp_s0xkboxVNwVgEAPOHJn9BYq60E4J3Qf45Dl9nuA/edit#gid=0'"">
+                        Test Case Doc
+                    </button>
                 </div>
             </div>
             <div class="details-container color-container">
                 <div class="article-container">
-                    <img src="./images/project3.png" alt="project 1" class="project-img">
+                    <img src="./images/project3.png" alt="project 3" class="project-img">
                 </div>
-                <p class="experience-sub-title">Coding.id Final Project</p>
+                <p class="experience-sub-title">[QA] Coding.id Final Project</p>
                 <!-- <p class="experience-sub-info">Final Project as QA Engineer Trainee, using Katalon Studio in Automation testing for WEB, API and Mobile platform</p> -->
                 <div class="about-cta">
                     <button class="project-cta" onclick="location.href='https://gitlab.com/iqbalsfsz/team4qa'"">
                         Github
+                    </button>
+                    <button class="project-cta" onclick="location.href='https://docs.google.com/spreadsheets/d/12G87X_GN-QVxhkHAI_CF2faiPX8tTCuk14ur5cNZslk/edit?usp=sharing'"">
+                        Test Case Doc
                     </button>
                 </div>
             </div>
